--- a/FiveSonsChess/app/src/main/AndroidManifest.xml
+++ b/FiveSonsChess/app/src/main/AndroidManifest.xml
@@ -16,7 +16,10 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".NumberGameActivity"></activity>
+        <activity android:name=".NumberGameActivity"
+            android:screenOrientation="portrait">
+
+        </activity>
     </application>
 
 </manifest>
